Worked with the java script to create a dark mode toggle and Linking it correctly to both htmls

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,14 +13,25 @@
 
 body {
   background-color: var(--light-blue);
+  color: white;
+}
+
+body.dark-mode {
+  background-color: var(--dark-grey);
+  color: white;
+}
+
+body.dark-mode header {
+  background-color: var(--black);
+  color: white;
 }
 
 header {
   padding: 20px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Verdana", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
+    Arial, sans-serif;
   background-color: var(--grey-blue);
-  color: var(--pink);
+  color: white;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -34,6 +45,16 @@ header nav {
   width: 80%;
 }
 
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  display: flex;
+  word-break: break-word;
+}
+
 /* Split the screen in half */
 .split {
   height: 100%;
@@ -41,27 +62,33 @@ header nav {
   position: fixed;
   z-index: 1;
   padding-top: 20px;
+  display: flex;
 }
 
 /* Control the left side */
 .left {
   left: 0;
   border: solid #e4e4e4;
+  display: flex;
+  word-break: break-word;
 }
 
 /* Control the right side */
 .right {
   right: 0;
   border: solid #e4e4e4;
+  display: flex;
+  word-break: break-word;
 }
 
-/* If you want the content centered horizontally and vertically */
 .centered {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .centered-right {
@@ -69,6 +96,8 @@ header nav {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 25px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* Style the image inside the centered container, if needed */
